--- a/edgy-wallpapers/war/index.html
+++ b/edgy-wallpapers/war/index.html
@@ -9,19 +9,25 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
+    <title>Edgy Wallpapers</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+    
+    <!-- App Script -->
+    <!-- TODO: Move to separate javascript file -->
+    <script lang="javascript">
+    	var app = angular.module('wallpaper', ['ngMaterial', 'ngRoute']);
+    </script>
   </head>
 
-  <body>
-    <h1>Hello App Engine!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="edgy_wallpapers">Edgy_wallpapers</a></td>
-      </tr>
-    </table>
+  <body ng-app="wallpaper" ng-cloak>
+    <input ng-model="name" name="name" type="text" />
+    <div>Hello, {{name}}!</div>
   </body>
 </html>
