Fix button icon labels

--- a/edgy-wallpapers/war/index.html
+++ b/edgy-wallpapers/war/index.html
@@ -43,10 +43,10 @@
     				<md-icon md-font-set="material-icons">share</md-icon>
     			</md-button>
     			<md-button class="md-icon-button" aria-label="menu">
-    				<md-icon md-font-set="material-icons">file-download</md-icon>
+    				<md-icon md-font-set="material-icons">file_download</md-icon>
     			</md-button>
     			<md-button class="md-icon-button" aria-label="menu">
-    				<md-icon md-font-set="material-icons">thumbs-up</md-icon>
+    				<md-icon md-font-set="material-icons">thumb_up</md-icon>
     			</md-button>
     		</div>
     	</md-toolbar>
