--- a/edgy-wallpapers/war/index.html
+++ b/edgy-wallpapers/war/index.html
@@ -20,9 +20,9 @@
     
     <!-- App Script -->
     <!-- TODO: Move to separate javascript file -->
-    <script type="text/javascript">
-    	var app = angular.module('wallpaper', ['ngMaterial', 'ngRoute']);
-    </script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <style type="text/css">
+    </style>
   </head>
 
   <body ng-app="wallpaper" ng-cloak>
@@ -50,6 +50,9 @@
     			</md-button>
     		</div>
     	</md-toolbar>
+    </md-content>
+    <md-content>
+    	<div ng-view></div>
     </md-content>
   </body>
 </html>
