--- a/edgy-wallpapers/war/home.html
+++ b/edgy-wallpapers/war/home.html
@@ -1,2 +1,21 @@
-<div>
-</div>
+<md-content>
+	<md-grid-list
+		md-cols="1"
+		md-cols-xs="2"
+		md-cols-md="4"
+		md-cols-gt-md="6"
+		md-row-height="300px"
+		md-row-height-xs="300px"
+		md-row-height-md="300px"
+		md-row-height-gt-md="16:10"
+		md-gutter="10px"
+		md-gutter-gt-sm="5px">
+		<md-grid-tile ng-repeat="image in images track by $index">
+			<md-card>
+				<md-card-content>
+					<img ng-src="{{image}}" style="width: 100%" />
+				</md-card-content>
+			</md-card>
+		</md-grid-tile>
+	</md-grid-list>
+</md-content>
